# rust-eventbus

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  INTEGRATION.md  README.md  README_EVENTBUS.md  build-server.sh  check_leaks.sh  clippy_fix.patch  fix1.patch  load_test.sh  local-build.sh  rustfmt.toml  todos.md
.jules/: bolt.md
benches/: embedding_bench.rs  eventbus_bench.rs  store_bench.rs
examples/: INGESTION_API.md  bench_embedding.rs  crawl_demo.rs  graph_pipeline.rs  libp2p_demo.rs  parse_demo.rs  persistence.rs  reranking_example.rs  search_demo.rs  search_tui.rs  simple_app.rs  simplified_web_server.rs  tcp_demo.rs  todo_app.rs  verify_chunking.rs  verify_pdf.rs  web_server.rs
examples/inputs/: docs.html  large-spa.html  structured.html
examples/outputs/: large-spa.html.md  structured.html.md
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  index.css
kubernetes/: README.md  deployment.yaml
scripts/: bundle_demo.sh  two_node_test.sh
src/: app_event.rs  bus.rs  cluster.rs  cluster_config.rs  distributed.rs  event.rs  graph.rs  lib.rs  libp2p_adapter.rs  libp2p_swarm.rs  projection.rs  store.rs  store.rs.orig  task_limiter.rs
src/crawler/: event.rs  mod.rs  service.rs
src/distributed/: discovery.rs  locks.rs  mod.rs  pubsub.rs  quorum_lock.rs  store.rs  tcp.rs  types.rs
src/embedding/: downloader.rs  event.rs  mod.rs  onnx.rs  processor.rs  projection.rs
src/parser/: chunker.rs  event.rs  extractor.rs  mod.rs  service.rs
tests/: embedding_test.rs  projection_recovery.rs  projection_replay.rs  repro_chunking.rs  split_brain.rs
