[package]
name = "rust-eventbus"
version = "0.1.0"
edition = "2021"
description = "A robust, asynchronous event bus and projection manager"

[dependencies]
# Async runtime and streams
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "2.0"

# Utils
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
tracing = "0.1"
bincode = "1.3.3"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Warn on some helpful pedantic lints that are good for learning but not overly annoying
pedantic = { level = "warn", priority = -1 }
# Allow a few pedantic lints that are often too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Enforce strict correctness and style
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
