[package]
name = "rust-eventbus"
version = "0.1.0"
edition = "2021"
description = "A robust, asynchronous event bus and projection manager"

[dependencies]
# Async runtime and streams
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "2.0"

# Utils
uuid = { version = "1.10", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1.3.3"
axum = "0.8.8"
serde_json = "1.0.149"
mimalloc = { version = "0.1", optional = true }

[dependencies.libp2p]
version = "0.56"
optional = true
features = ["gossipsub", "tcp", "noise", "yamux", "tokio", "mdns", "macros"]

[dependencies.libp2p-gossipsub]
version = "0.49"
optional = true

[dependencies.libp2p-mdns]
version = "0.47"
optional = true

[features]
# Optional backends
libp2p-backend = ["libp2p", "libp2p-gossipsub", "libp2p-mdns"]

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "eventbus_bench"
harness = false

[[bench]]
name = "store_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Warn on some helpful pedantic lints that are good for learning but not overly annoying
pedantic = { level = "warn", priority = -1 }
# Allow a few pedantic lints that are often too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Enforce strict correctness and style
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
